Fix white gaps on sides of nav by adding background-color to header

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,6 +168,7 @@ body.appear {
 
 header {
   height: var(--nav-height);
+  background-color: #000;
 }
 
 header .header,
